# vaccaricode_podcast

./: .env.example  .gitignore  Makefile  README.md
db/migrations/: 0001_init.sql  0002_topic_base_score.sql  0003_language_variants.sql  0004_topic_origin.sql  0005_site_build_requests.sql  0006_newsletter_digests.sql
deploy/: DEPLOY.md  NEWSLETTER.md  README.md  VPS_DEPLOY.md  compose.home.yml  compose.prod.yml  docker-compose.yml  publish-rebuild.sh  rebuild-watch.sh  redeploy.sh  stack.boosternews.yml  swarm-run.sh  weekly-digest.sh
deploy/caddy/: Caddyfile
deploy/listmonk/: config.toml
deploy/nginx/: nginx.conf
deploy/postgres/initdb/: 00-create-listmonk-db.sh
deploy/voice/: README.md
openspec/: config.yaml
openspec/changes/archive/: README.md
openspec/specs/: README.md
pipeline/: Dockerfile  README.md  pyproject.toml
pipeline/src/boosternews/: __init__.py  __main__.py  audio.py  cli.py  config.py  db.py  dedup.py  digest.py  extract.py  generate.py  ingest.py  jobs.py  listmonk.py  llm.py  migrate.py  models.py  prompts.py  publish.py  repository.py  review.py  scheduler.py  scoring.py  seed.py  storage.py  utm.py
pipeline/src/boosternews/dashboard/: __init__.py  app.py  templates.py
pipeline/src/boosternews/narration/: __init__.py  app.py  service.py
pipeline/src/boosternews/sources/: __init__.py  github.py  hackernews.py  registry.py  rss.py
pipeline/src/boosternews/tts/: __init__.py  custom.py  elevenlabs.py
pipeline/tests/: conftest.py  test_audio.py  test_config.py  test_dedup.py  test_extract.py  test_generate.py  test_publish.py  test_review.py  test_scheduler.py  test_scoring.py  test_sources.py  test_utm.py
sound-worker/: Dockerfile  README.md  pyproject.toml
sound-worker/src/sound_worker/: __init__.py  __main__.py  config.py  worker.py
web/: README.md  astro.config.mjs  package.json
(+116 files in other folders)
