[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "boosternews"
version = "0.1.0"
description = "boosternews content pipeline (trend discovery, AI generation, audio assembly, publishing)"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.2",
    "psycopg[binary]>=3.1",
    "boto3>=1.34",
    "google-genai>=1.0",
    "feedparser>=6.0",
    "trafilatura>=1.8",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "black>=24.0",
    "pytest>=8.0",
]

[project.scripts]
boosternews = "boosternews.__main__:main"
boosternews-migrate = "boosternews.migrate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
